# welding

./: .gitignore  AGENTS.md  pyproject.toml
docs/: CHANGELOG.md  app.md  cli.md  docuworks_automation.md  field_map.yaml  local_app.md  mssql_workers.md  ocr.md  setup_windows.md  vertical_autodetect.md
scripts/: build_portable_zip.ps1  convert_xdw_to_pdf.ps1  convert_xls_to_parquet.py  e2e_docuworks.ps1  gui_launcher.py  monitor_and_due.ps1  run_app.ps1  run_gui.ps1  scan_headers.py  setup_windows_venv.ps1  xdw_light_convert.ps1  xdw_light_convert2.ps1  xdw_to_pdf.ahk  xdw_to_pdf_v2.ahk
src/welding_registry/: __init__.py  __main__.py  app.py  csvdb.py  dates_jp.py  db.py  field_map.py  gui.py  io_excel.py  io_pdf.py  issue.py  licenses.py  normalize.py  paths.py  print_archive.py  reminders.py  review.py  shikaku_loader.py  versioned.py  warehouse.py  xdw.py
src/welding_registry/templates/: index.html  input.html  layout.html  person.html  print.html  report.html  ver_csv_input.html  ver_csv_preview.html  ver_editor.html  ver_index.html  ver_person.html  ver_print.html  ver_xlsx_input.html  ver_xlsx_preview.html  ver_xlsx_select.html
src/welding_registry/webapp/: __init__.py  qual.py  routes.py
tests/: test_cli_args.py  test_csvdb.py  test_duckdb_export.py  test_field_map_loader.py  test_io_excel.py  test_licenses_ocr.py  test_licenses_text.py  test_normalize_keys.py  test_paths.py  test_reminders.py  test_shikaku_loader.py  test_smoke.py  test_versioned.py  test_vertical_autodetect.py  test_warehouse.py  test_web_issue.py  test_web_qual.py  test_web_routes.py
(+8 files in other folders)
